# gbinder

./: README.md  gbinder.c  pyproject.toml  setup.py
.github/workflows/: publish.yml
