[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "Cython>=0.29",
    "gitpython>=3.1",
    "pkgconfig",
    "meson-python>=0.13.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "gbinder"
version = "1.2.7"
description = "Cython extension module for C++ gbinder functions"
readme = "README.md"
requires-python = ">=3.6"
license = { file = "LICENSE" }
authors = [
    { name="Erfan Abdi", email="erfangplus@gmail.com" }
]
maintainers = [
    { name="Meshack Bahati", email="bahatikylemeshack@gmail.com" }
]
keywords = ["Cython", "C++", "gbinder", "extension module"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Cython",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]

[project.urls]
Source = "https://github.com/Kyle6012/gbinder"
